2006-10-28  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/UserConfig/ipythonrc-scipy: minor clenaups to remove old
	Numeric leftovers.

	* ipython.el (py-execute-region): apply Stefan's patch to fix
	garbled results if the python shell hasn't been previously started.

	* IPython/genutils.py (arg_split): moved to genutils, since it's a
	pretty generic function and useful for other things.

	* IPython/OInspect.py (getsource): Add customizable source
	extractor.  After a request/patch form W. Stein (SAGE).

	* IPython/irunner.py (InteractiveRunner.run_source): reset tty
	window size to a more reasonable value from what pexpect does,
	since their choice causes wrapping bugs with long input lines.

2006-10-28  Ville Vainio  <vivainio@gmail.com>

	* Magic.py (%run): Save and restore the readline history from 
	file around %run commands to prevent side effects from 
	%runned programs that might use readline (e.g. pydb).

	* extensions/pydb_ipy.py: Adds %pydb magic when imported, for 
	invoking the pydb enhanced debugger.

2006-10-23  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ipipe.py (ifile): Remove all methods that
	call the base class method and propagate the return value to
	ifile. This is now done by path itself.

2006-10-15  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/ipapi.py (IPApi.__init__): Added new entry to public
	api: set_crash_handler(), to expose the ability to change the
	internal crash handler.

	* IPython/CrashHandler.py (CrashHandler.__init__): abstract out
	the various parameters of the crash handler so that apps using
	IPython as their engine can customize crash handling.  Ipmlemented
	at the request of SAGE.

2006-10-14  Ville Vainio  <vivainio@gmail.com>

	* Magic.py, ipython.el: applied first "safe" part of Rocky 
	Bernstein's patch set for pydb integration.

	* Magic.py (%unalias, %alias): %store'd aliases can now be
	removed with '%unalias'. %alias w/o args now shows most 