@@ -1,3 +1,9 @@
+2006-10-30  Ville Vainio  <vivainio@gmail.com>
+
+	* Debugger.py, iplib.py (debugger()): Add last set of Rocky 
+	Bernsteins's patches for pydb integration.
+	http://bashdb.sourceforge.net/pydb/
+
 2006-10-28  Fernando Perez  <Fernando.Perez@colorado.edu>
 
 	* IPython/UserConfig/ipythonrc-scipy: minor clenaups to remove old
@@ -22,7 +28,7 @@
 	file around %run commands to prevent side effects from 
 	%runned programs that might use readline (e.g. pydb).
 
-	* extensions/pydb_ipy.py: Adds %pydb magic when imported, for 
+	* extensions/ipy_pydb.py: Adds %pydb magic when imported, for 
 	invoking the pydb enhanced debugger.
 
 2006-10-23  Walter Doerwald  <walter@livinglogic.de>
